--- a/index.html
+++ b/index.html
@@ -92,12 +92,14 @@
 							<label for="regex-input">Input Regex</label>
 						</div>
 					</div>
-					<div class="row mb-3">
-						<div class="col-10">
+					<div class="row mb-1">
+						<div class="col">
 							<input id="regex-input" class="form-control" type="text" value="" placeholder="\b[A-Z0-9._%+-]+@[A-Z0-9.-]+\.[A-Z]{2,}\b">
 						</div>
-						<div class="col-2">
-							<button id="regex-submit" type="button" class="btn btn-success">Submit Query</button>
+					</div>
+					<div class="row mb-3">
+						<div class="col">
+							<button id="regex-submit" type="button" class="btn btn-success">Submit Regex</button>
 						</div>
 					</div>
 					<div class="row">
